# multi-agent-system

./: .gitignore  CLAUDE.md  Cargo.toml  package-lock.json
backend/: CLAUDE.MD  Cargo.toml
backend/src/: agent.rs  agent_system.rs  errors.rs  lib.rs  main.rs  message.rs  session.rs
backend/src/chat/: llm_trait.rs  mod.rs  ollama_chat.rs
crates/mas-api/: Cargo.toml
crates/mas-api/src/: app.rs  error.rs  handlers.rs  lib.rs  main.rs  models.rs  session.rs  state.rs
crates/mas-api/src/handlers/: auth.rs  mod.rs  orgs.rs  sessions.rs  systems.rs
crates/mas-api/static/: 404.html  __next.__PAGE__.txt  __next._full.txt  __next._head.txt  __next._index.txt  __next._tree.txt  _not-found.html  _not-found.txt  index.html  index.txt
crates/mas-api/static/_next/static/chunks/: 18309ae35330882a.js  1c6185eb25b06e19.css  1f4f645ec1ecf11d.js  462c27e7fa823711.js  47aae555188a61fa.css  514fff5b32d81649.js  74b9a52ced08df4c.js  8562846b15532d0b.css  86c1fc4cf542f408.js  8d17ade4bba71898.css  turbopack-d45949c63928c03e.js
crates/mas-api/static/_not-found/: __next._full.txt  __next._head.txt  __next._index.txt  __next._not-found.__PAGE__.txt  __next._not-found.txt  __next._tree.txt
crates/mas-api/static/assets/: index-BXof_Ed7.js  index-BuSa84u2.css  index-CJCSXuXc.js  index-DBXDQS6B.css  index-DnyRFEVK.css  index-qpOavHA3.js
crates/mas-auth/: Cargo.toml
crates/mas-auth/migrations/: 001_initial.sql
crates/mas-auth/src/: db.rs  jwt.rs  lib.rs  middleware.rs  models.rs  password.rs  repository.rs
crates/mas-cli/: Cargo.toml
crates/mas-cli/src/: main.rs
crates/mas-core/: Cargo.toml
crates/mas-core/src/: agent.rs  agent_system.rs  config.rs  config_loader.rs  connection.rs  conversation.rs  database.rs  database_handler.rs  decision.rs  errors.rs  lib.rs  message.rs  session_memory.rs  tool.rs  tool_handler.rs  tracer.rs
crates/mas-core/src/llm/: handler.rs  mod.rs  ollama.rs  provider.rs
data/sessions/8a85e96f-21ad-467f-a568-0f20bb3d1ee5/: messages.json  metadata.json
data/sessions/b85da95c-d7c9-4c72-a839-9e522e55570f/: messages.json  metadata.json
data/sessions/fc85c4fc-4768-4a0f-babc-ad4e84d30f4f/: messages.json  metadata.json
examples/: basic_routing.json  code_review.json  database_query.json  expert_panel.json  joblyst_tools.json  medical_triage.json  minimal.json  with_tools.json
frontend/: EDITOR_GUIDE.md  index.html  next.config.ts  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: client.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AgentForm.tsx  AgentModal.tsx  AgentNode.tsx  AuthGuard.tsx  ChatMessage.tsx  ChatPanel.tsx  ConfigEditor.tsx  ConnectionEditor.tsx  DatabaseModal.tsx  DatabaseNode.tsx  LoginPage.tsx  NavBar.tsx  OrgManagement.tsx  OrgSwitcher.tsx  RestApiModal.tsx  RestApiNode.tsx  SystemBuilder.tsx  SystemCard.tsx  SystemsOverview.tsx  ToolModal.tsx  ToolNode.tsx  TopologyGraph.tsx
frontend/src/lib/: auth.ts
frontend/src/pages/: ChatPage.tsx  HomePage.tsx  SystemDetailPage.tsx  SystemsPage.tsx
frontend/src/styles/: main.css
frontend/src/types/: agent.ts  api.ts
