[workspace]
resolver = "2"
members = [
    "crates/mas-core",
    "crates/mas-cli",
    "crates/mas-api",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sascha/multi-agent-system"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Web server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Internal crates
mas-core = { path = "crates/mas-core" }
