[workspace]
resolver = "2"
members = [
    "crates/mas-core",
    "crates/mas-cli",
    "crates/mas-api",
    "crates/mas-auth",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/sascha/multi-agent-system"

[workspace.dependencies]
# Async runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"
futures = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# HTTP client
reqwest = { version = "0.12", features = ["json"] }

# MCP (Model Context Protocol) client
rmcp = { version = "0.14", features = ["client", "transport-streamable-http-client-reqwest"] }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# CLI
clap = { version = "4.4", features = ["derive"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }

# Auth
jsonwebtoken = "9"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Web server
axum = "0.7"
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace", "fs"] }

# Internal crates
mas-core = { path = "crates/mas-core" }
mas-auth = { path = "crates/mas-auth" }
