[package]
name = "mas-cli"
description = "CLI for multi-agent systems"
version.workspace = true
edition.workspace = true

[[bin]]
name = "mas"
path = "src/main.rs"

[dependencies]
mas-core = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
