[package]
name = "mas-core"
description = "Core library for multi-agent systems with LLM-based routing"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
