[package]
name = "mas-core"
description = "Core library for multi-agent systems with LLM-based routing"
version.workspace = true
edition.workspace = true

[dependencies]
tokio = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
reqwest = { workspace = true }
rmcp = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
sqlx = { workspace = true }

# Optional: memvid for semantic search (requires ffmpeg + working bindgen)
# Enable with: cargo build --features memvid
memvid-rs = { version = "1.2", optional = true }

[features]
default = []
# Enable memvid-based semantic search (requires ffmpeg installed)
memvid = ["memvid-rs"]

[dev-dependencies]
tempfile = "3.10"
